# olymp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  competitive  pyproject.toml
ITMO/: 10.py  7.py  8.py  9.py  a.py  b.py
LeetCode/: 12.cpp  1822.cpp  2579.cpp
NTO/: a.cpp  b.cpp  c.py  e.cpp
NTO/first/: d.py
NTO/second/: a.py  b.py  test.txt
codeforces/: 260b.cpp  637b.cpp  650a.cpp
informatics/BFS/: 164.cpp  165.cpp  182.cpp  1928.cpp  g.cpp  путь_в_графе.cpp
informatics/DFS/: c.cpp  d.cpp  f.cpp  i.cpp  l.cpp  m.cpp  два_коня.cpp  игрушечный_лабиринт.cpp  табличка.cpp  только_направо.cpp  числа.cpp
informatics/dijkstra/: algoland.cpp  b.cpp  автобусы.cpp  витрины.cpp  домой-на-электричках.cpp  налог.cpp  транспортировка.cpp
informatics/структуры-данных-2/: e.cpp  g.cpp  h.cpp  i.cpp
informatics/теория-графов/: t.cpp
mosh/solutions/: a.py  b.out.txt  b.py  c.cpp
src/CF/: 158a.cpp  1a.cpp  1b.cpp  204b.cpp  231a.cpp  263a.cpp  282a.cpp  2a.cpp  4a.cpp  50a.cpp  71a.cpp  777b.cpp  961a.cpp
src/UniLecs/: 168.cpp  169.cpp  170.cpp  171.cpp  172.cpp  174.cpp  175.cpp
src/gazprom/: decode.py  mist_message.py  ya1.py  ya2.cpp  ya2.py  ya22.cpp
src/squirell/: a.py  b.py  c.py  c.txt  d.py  e.py  f.py  g.py
src/tinkoff-generation/: README.md
state-university/: h.cpp
state-university/2021-2022/: a.cpp  a.py  c.cpp  c.py  e.cpp  g.cpp  i.cpp
stepik/: grades.py  matrix.py  most_pop_word.py
ВСОШ (муниципальный)/: a.out  a.py  c.py  d.py  e.py  f.cpp  f.py
ВСОШ (школьный)/: second.py  third.cpp
ВСОШ/муниципальный/: b.py
(+131 files in other folders)
