[tool.poetry]
authors = ["AlanTheKnight <51376126+AlanTheKnight@users.noreply.github.com>"]
description = ""
name = "competitive"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
