[tool.poetry]
name = "competitive"
version = "0.1.0"
description = ""
authors = ["AlanTheKnight <51376126+AlanTheKnight@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
